Ion-Slide, Expandable

--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -63,7 +63,7 @@
     </ion-col>
   </ion-row>
 
-<div class="div_scroll">
+<!-- <div class="div_scroll">
   <div class="videos_card">
     <img src="../../assets/images/placeholder.png" class="thumbnail"/>
     <ion-label class="lbl_vid">Fundamental Forces in Nature, Fundamental Forces in Nature</ion-label>
@@ -88,7 +88,30 @@
     <img src="../../assets/images/placeholder.png" class="thumbnail"/>
     <ion-label class="lbl_vid">Fundamental Forces in Nature</ion-label>
   </div>
-</div>
+</div> -->
+
+  <ion-slides [options]="slideVideoOpts" class="div_scroll">
+    <ion-slide class="videos_card">
+      <img src="../../assets/images/placeholder.png" class="thumbnail"/>
+    <ion-label class="lbl_vid">Fundamental Forces in Nature, Fundamental Forces in Nature</ion-label>
+    </ion-slide>
+    <ion-slide class="videos_card">
+      <img src="../../assets/images/placeholder.png" class="thumbnail"/>
+    <ion-label class="lbl_vid">Fundamental Forces in Nature, Fundamental Forces in Nature</ion-label>
+    </ion-slide>
+    <ion-slide class="videos_card">
+      <img src="../../assets/images/placeholder.png" class="thumbnail"/>
+    <ion-label class="lbl_vid">Fundamental Forces in Nature, Fundamental Forces in Nature</ion-label>
+    </ion-slide>
+    <ion-slide class="videos_card">
+      <img src="../../assets/images/placeholder.png" class="thumbnail"/>
+    <ion-label class="lbl_vid">Fundamental Forces in Nature, Fundamental Forces in Nature</ion-label>
+    </ion-slide>
+    <ion-slide class="videos_card">
+      <img src="../../assets/images/placeholder.png" class="thumbnail"/>
+    <ion-label class="lbl_vid">Fundamental Forces in Nature, Fundamental Forces in Nature</ion-label>
+    </ion-slide>
+  </ion-slides>
 
   <ion-row class="row_sec">
     <ion-col size="9" class="col_">
@@ -99,7 +122,30 @@
     </ion-col>
   </ion-row>
 
-  <div class="div_scroll">
+  <ion-slides [options]="slideDocOpts" class="div_scroll">
+    <ion-slide class="doc_card">
+      <img src="../../assets/images/placeholder.png" class="thumbnail"/>
+    <ion-label class="lbl_vid">Fundamental Forces in Nature, Fundamental Forces in Nature</ion-label>
+    </ion-slide>
+    <ion-slide class="doc_card">
+      <img src="../../assets/images/placeholder.png" class="thumbnail"/>
+    <ion-label class="lbl_vid">Fundamental Forces in Nature, Fundamental Forces in Nature</ion-label>
+    </ion-slide>
+    <ion-slide class="doc_card">
+      <img src="../../assets/images/placeholder.png" class="thumbnail"/>
+    <ion-label class="lbl_vid">Fundamental Forces in Nature, Fundamental Forces in Nature</ion-label>
+    </ion-slide>
+    <ion-slide class="doc_card">
+      <img src="../../assets/images/placeholder.png" class="thumbnail"/>
+    <ion-label class="lbl_vid">Fundamental Forces in Nature, Fundamental Forces in Nature</ion-label>
+    </ion-slide>
+    <ion-slide class="doc_card">
+      <img src="../../assets/images/placeholder.png" class="thumbnail"/>
+    <ion-label class="lbl_vid">Fundamental Forces in Nature, Fundamental Forces in Nature</ion-label>
+    </ion-slide>
+  </ion-slides>
+
+  <!-- <div class="div_scroll">
     <div class="doc_card">
       <img src="../../assets/images/placeholder.png" class="thumbnail"/>
       <ion-label class="lbl_vid">Fundamental Forces in Nature</ion-label>
@@ -124,7 +170,7 @@
       <img src="../../assets/images/placeholder.png" class="thumbnail"/>
       <ion-label class="lbl_vid">Fundamental Forces in Nature</ion-label>
     </div>
-  </div>
+  </div> -->
 
   <div class="div_shr">
     <img src="../../assets/images/placeholder.png" class="shr_img"/>
