--- a/src/app/component/expandable/expandable.component.scss
+++ b/src/app/component/expandable/expandable.component.scss
@@ -1,9 +1,10 @@
-expandable{
-    .expand-wrapper{
-        height: 0;
-        transition: 0.5s linear;
-    }
-    .expanded{
-        height: 200 !important;
-    }
+.expand-wrapper{
+    height: auto;
+    //transition: max-height 0.4s ease-in-out;
+    overflow: hidden;
+    transition: 0.5s linear;
+}
+
+.collapsed{
+    height: 0 !important;
 }
