--- a/src/app/physics/physics.page.html
+++ b/src/app/physics/physics.page.html
@@ -38,7 +38,7 @@
 
       <div *ngSwitchCase="'practice'">
         
-        <div (click)="expandItem(item)" *ngFor="let item of items">
+        <!-- <div (click)="expandItem(item)" *ngFor="let item of items">
           <ion-row>
             <ion-col size="2">
               <ion-label>1</ion-label>
@@ -53,7 +53,72 @@
           <app-expandable [expandHeight]="itemExpandHeight" [expanded]="item.expanded">
             Hello Friends
           </app-expandable>
-        </div>
+        </div> -->
+
+        <!-- <ion-card class="card-main">
+          <ion-row class="row-card" (click)="expandItem(item)">
+            <ion-col size="10" class="col-lbl">
+              <ion-label class="col-title">Bill no</ion-label>
+              <ion-label class="col-value">Bill</ion-label>
+            </ion-col>
+            <ion-col size="2" class="col-edit">
+              <ion-button size="small" fill="clear" class="btn-edit">
+                <ion-icon name="arrow-forward"></ion-icon>
+              </ion-button>
+              <ion-button size="small" fill="clear" class="btn-edit">
+                <ion-icon name="arrow-down"></ion-icon>
+              </ion-button>
+            </ion-col>
+          </ion-row>
+          <ion-card-content class="main-card-content">
+            <app-expandable expandHeight="100px" [expanded]="item.expanded">
+              <ion-row class="row-card">
+                <ion-col size="10" class="col-lbl">
+                  <ion-label class="col-title">Client Name</ion-label>
+                  <ion-label class="col-value">Name</ion-label>
+                </ion-col>
+                <ion-col size="2"></ion-col>
+              </ion-row>
+              <ion-row class="row-card">
+                <ion-col size="10" class="col-lbl">
+                  <ion-label class="col-title">Client Phone</ion-label>
+                  <ion-label class="col-value">Phone</ion-label>
+                </ion-col>
+                <ion-col size="2" class="col-lbl add">
+                  <ion-button size="small" fill="clear" class="print">
+                    <ion-icon name="print" mode="md" class="btn-icon"></ion-icon>
+                  </ion-button>
+                </ion-col>
+              </ion-row>
+              <ion-row class="row-card">
+                <ion-col size="6" class="col-lbl">
+                  <ion-label class="col-title">Total Products</ion-label>
+                  <ion-label class="col-value">Products</ion-label>
+                </ion-col>
+                <ion-col size="4" class="col-lbl">
+                  <ion-label class="col-title">Total Amount</ion-label>
+                  <ion-label class="col-value">Amount</ion-label>
+                </ion-col>
+                <ion-col size="2" class="col-lbl add">
+                  <ion-button size="small" fill="clear" class="edit">
+                    <ion-icon name="create" mode="md" class="btn-icon"></ion-icon>
+                  </ion-button>
+                </ion-col>
+              </ion-row>
+              <ion-row class="row-card">
+                <ion-col size="10" class="col-lbl">
+                  <ion-label class="col-title">Date Time</ion-label>
+                  <ion-label class="col-value" >Date</ion-label>
+                </ion-col>
+                <ion-col size="2" class="col-lbl add">
+                  <ion-button size="small" fill="clear" class="dlt">
+                    <ion-icon name="trash" mode="md" class="btn-icon"></ion-icon>
+                  </ion-button>
+                </ion-col>
+              </ion-row>
+            </app-expandable>
+          </ion-card-content>
+        </ion-card> -->
 
       </div>
 
