Icon and Name Changes

--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -21,19 +21,19 @@
 
   <div class="sub_head">
     <div class="sub_sec">
-      <img src="../../assets/images/placeholder.png" class="sub_"/>
+      <img src="../../assets/images/Maths.png" class="sub_"/>
       <ion-label class="lbl_">Maths</ion-label>
     </div>
     <div class="sub_sec">
-      <img src="../../assets/images/placeholder.png" class="sub_"/>
+      <img src="../../assets/images/Chemistry.png" class="sub_"/>
       <ion-label class="lbl_">Chemistry</ion-label>
     </div>
     <div class="sub_sec">
-      <img src="../../assets/images/placeholder.png" class="sub_"/>
+      <img src="../../assets/images/Biology.png" class="sub_"/>
       <ion-label class="lbl_">Biology</ion-label>
     </div>
     <div class="sub_sec" (click)="physics()">
-      <img src="../../assets/images/placeholder.png" class="sub_"/>
+      <img src="../../assets/images/Physics.png" class="sub_"/>
       <ion-label class="lbl_">Physics</ion-label>
     </div>
   </div>
