--- a/src/app/select-grade/select-grade.page.scss
+++ b/src/app/select-grade/select-grade.page.scss
@@ -1,12 +1,12 @@
 ion-content{
     .div_grade{
         box-shadow: 0px 4px 18px #ccc;
-        margin: 8px;
-        padding: 14px 12px;
+        margin: 10px;
+        padding: 16px 12px;
         .lbl_medium{
             display: block;
             font-size: 18px;
-            margin: 0 0 20px 0;
+            margin: 0 0 28px 0;
         }
         .lbl_grade{
             font-size: 17px;
@@ -14,6 +14,7 @@ ion-content{
             color: white;
             padding: 8px;
             border-radius: 8px;
+            font-size: 14px;
         }
     }
 }
