--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,8 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+@import "~@vime/core/themes/default.css";
+
 @font-face {
   font-family: "Muli";
   font-style: normal;
